--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div id="app"></div>
